--- a/home/index.html
+++ b/home/index.html
@@ -5,40 +5,46 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<ul> 
+        <li><a href="index.html">Home</a></li>
+        <li><a href="../About/About.html">About</a></li>
+        <li><a href="../ContactUs/ContactUs.html">Contact us</a></li>
+
+</ul>
         <div class="grid">
                 <div class="col-1-1">
                     <h1 id="header">Gallery</h1>
                 </div>
                 <div class="col-1-4">
-                    <img id="girona" src="img/girona.jpg" alt="Girona">
+                    <img id="girona" src="../img/girona3.jpg" alt="Girona">
                     <div class="player">
-                            <video src="mov/IMG_3325.mov" height="168"
+                            <video src="../mov/IMG_3325.mov" height="168"
                                    width="300" controls alt="Aconcagua"></video>
                          </div> 
-                    <img id="mijas" src="img/mijas.jpg" alt="Mijas">
+                    <img id="mijas" src="../img/mijas2.jpg" alt="Mijas">
                 </div>
                 <div class="col-1-4">
-                    <img id="machu" src="img/machu.jpg" alt="Machu Picchu">
-                    <img id="malaga" src="img/malaga.jpg" alt="Malaga">
+                    <img id="machu" src="../img/machu2.jpg" alt="Machu Picchu">
+                    <img id="malaga" src="../img/malaga2.jpg" alt="Malaga">
                     <div class="player">
-                            <video src="mov/IMG_1731.mov" height="168"
+                            <video src="../mov/IMG_1731.mov" height="168"
                                    width="300" controls alt="Mt. Everest"></video>
                          </div>  
                 </div>
                 <div class="col-1-4">
-                        <img  src="img/img_3775.jpg" alt="Patagonia, Chile">
+                        <img  src="../img/img_37752.jpg" alt="Patagonia, Chile">
                      <div class="tall">
-                            <video src="mov/IMG_6245.mov" height="300"
+                            <video src="../mov/IMG_6245.mov" height="300"
                                     width="220" controls alt="Greenhouse"></video>
                             </div> 
-                        <img  src="img/img_5350.jpg" alt="Dead Sea">
+                        <img  src="../img/img_53502.jpg" alt="Dead Sea">
                        
                 </div>
                 <div class="col-1-4">
-                        <img  src="img/img_6402.jpg" alt="Grandparents">
-                        <img id="fly" src="img/fly.jpg" alt="Nepal">  
+                        <img  src="../img/img_6402.jpg" alt="Grandparents">
+                        <img id="fly" src="../img/fly4.jpg" alt="Nepal">  
                              <div class="tall">
-                                    <video src="mov/IMG_3269.mp4" height="300"
+                                    <video src="../mov/IMG_3269.mp4" height="300"
                                            width="220" controls alt="Ezra likes MacNCheese"></video>
                                  </div>  
                             
